--- a/notebookapp/www/index.html
+++ b/notebookapp/www/index.html
@@ -20,30 +20,33 @@
     under the License.
 -->
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <meta name="format-detection" content="telephone=no" />
-        <meta name="msapplication-tap-highlight" content="no" />
-        <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-        <link rel="stylesheet" type="text/css" href="css/index.css" />
-<!--         <link rel="stylesheet" type="text/css" href="css/jquery.mobile.custom.structure.css" />
-        <link rel="stylesheet" type="text/css" href="css/jquery.mobile.custom.theme" />
- -->        <title>Notebook App</title>
-    </head>
-    <body>
-        <div class="app">
-            <h1>PhoneGap</h1>
-            <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
-            </div>
-        </div>
-        <script type="text/javascript" src="cordova.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
-        <script type="text/javascript">
-            app.initialize();
-        </script>
-        <!-- // <script type="text/javascript" src="js/jquery.mobile.custom.js"></script> -->
-    </body>
+<head>
+    <meta charset="utf-8" />
+    <meta name="format-detection" content="telephone=no" />
+    <meta name="msapplication-tap-highlight" content="no" />
+    <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
+    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+    <!-- <link rel="stylesheet" type="text/css" href="css/index.css" /> -->
+    <link rel="stylesheet" type="text/css" href="css/jquery.mobile.custom.structure.css" />
+    <link rel="stylesheet" type="text/css" href="css/jquery.mobile.custom.theme.css" />
+    <title>Notebook App</title>
+</head>
+<body>
+    <div data-role="header" style="overflow:hidden;">
+        <h1>Welcome!</h1>
+        <a href="#" data-icon="gear" class="ui-btn-right" onclick="app.buttonpress();">Options</a>
+
+        <button class="ui-btn ui-shadow" onclick="app.buttonpress();">Button</button>
+    </div><!-- /header -->
+
+    <script type="text/javascript" src="cordova.js"></script>
+    <script type="text/javascript" src="js/jquery.js"></script>
+    <script type="text/javascript" src="js/jquery.mobile.custom.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript">
+        app.initialize();
+    </script>
+    <!-- // <script type="text/javascript" src="js/jquery.mobile.custom.js"></script> -->
+
+</body>
 </html>
