--- a/notebookapp/www/index.html
+++ b/notebookapp/www/index.html
@@ -258,7 +258,7 @@ Problems:
         <div data-role="content" align="center">
             <h2 class="studyname">Working On: </h2>
             <p>Ready for Observation!</p>
-            <a href="#observationpage" id="stopalarm" data-role="button" onclick="utilfunc.countsobservations();">Start This Observation</a>
+            <a href="#observationpage" id="stopalarm" data-role="button">Start This Observation</a>
         </div>
     </div>
 <!-- Observation Page -->
@@ -299,6 +299,19 @@ Problems:
     </div>
 
     <div data-role="page" id="finalobservation">
+        <div data-role="header">
+            <h1>Field and Lab Notebook</h1>
+            <a href="#homeloggedin" data-role="button" data-icon="home" class="ui-btn-right">Home</a>
+        </div>
+        <div data-role="content">
+        <h3>FINAL OBSERVATION</h3>
+        <p class="studyname">Study: </p>
+        <p style="font-size: 0.75em" class="date">Date: </p>
+        <p style="font-size: 0.75em" class="time">Time: </p>
+
+        <label for="notes">Notes/Comments:</label>
+        <textarea name="notestext" id="notes"></textarea>
+        </div>
     </div>
     <!--
 When you click the #startsession, functions are called to add necessary elements to ob page. User will be taken to an interim page for 5 secs.
