fixed issue with radio checkboxes

--- a/notebookapp/www/index.html
+++ b/notebookapp/www/index.html
@@ -162,16 +162,16 @@ Problems:
             <div data-role="fieldcontain" name="numfieldtype" id="numfieldtype" class="ui-radio ui-disabled"> 
                 <fieldset data-role="controlgroup" data-mini="true">
                     <legend>Number Field Type:</legend>
-                    <input type="radio" name="radio-choice" id="radio-choice-1" value="Other" checked="checked" />
+                    <input type="radio" name="radio-choice" id="radio-choice-1" value="Other" checked="checked">
                     <label for="radio-choice-1">Other</label>
 
-                    <input type="radio" name="radio-choice" id="radio-choice-2" value="km"  />
+                    <input type="radio" name="radio-choice" id="radio-choice-2" value="km" >
                     <label for="radio-choice-2">km</label>
 
-                    <input type="radio" name="radio-choice" id="radio-choice-3" value="m"  />
+                    <input type="radio" name="radio-choice" id="radio-choice-3" value="m"  >
                     <label for="radio-choice-3">m</label>
 
-                    <input type="radio" name="radio-choice" id="radio-choice-4" value="cm"  />
+                    <input type="radio" name="radio-choice" id="radio-choice-4" value="cm"  >
                     <label for="radio-choice-4">cm</label>
                 </fieldset>
             </div>   
@@ -343,6 +343,8 @@ This page needs to push an alarm and also make sound/vibrate-->
         </div>
     </div>
 
+
+<!--export page-->
     <div data-role="page" id="exportpage">
         <div data-role="header">
             <h1>Field and Lab Notebook</h1>
