--- a/notebookapp/www/index.html
+++ b/notebookapp/www/index.html
@@ -65,7 +65,8 @@ Problems:
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/jquery.js"></script>
         <script type="text/javascript" src="js/jquery.mobile.custom.js"></script>
-        <script type="text/javascript" src ="js/pouchdb-3.2.0.min.js"></script>
+        <script type="text/javascript" src="js/pouchdb-3.2.0.min.js"></script>
+        <script type="text/javascript" src="js/dropbox-datastores-1.2.0.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
             app.initialize();
